# cilantro

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  setup.cfg  sitemap.xml
.github/workflows/: publish.yml  release.yml  test.yml
CHANGELOG/: index.html
api/: index.html
docs/: CHANGELOG.md  CNAME  api.md  index.md
requirements/: dev.txt
search/: search_index.json
src/cilantro/: __init__.py  core.py
tests/: conftest.py  test_app.py  test_core.py
