[metadata]
name = cilantro
version = attr: cilantro.__version__
author = iamgodot
author_email = xugodot@gmail.com
description = A practical and fast web framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iamgodot/cilantro
project_urls =
    Bug Tracker = https://github.com/iamgodot/cilantro/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =

[options.extras_require]
dev = pytest; pytest-mock; pytest-cov; flake8

[tox:tox]
envlist = py3
isolated_build = True

[testenv]
deps = -r requirements/dev.txt
commands =
    make clean
    #make lint
	pytest -v --cov={envsitepackagesdir}/py_tldr tests
allowlist_externals = make

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    cilantro
    tests

[flake8]
exclude =
  .git
  .tox
  venv
  build
max-line-length = 88
per-file-ignores =
    # __init__ module exports names
    src/cilantro/__init__.py: F401
